zeit.content.article changes
============================

3.0.3 (unreleased)
------------------

- Display last_semantic_change with the user's timezone (#12396).

- Decouple character limit during entry of text from validation during
  check-in of article (#12462).


3.0.2 (2013-05-29)
------------------

- Newly created articles now have a last_semantic_change value set (#12398).


3.0.1 (2013-05-16)
------------------

- Remove obsolete content-editable workaround. This prevents text from being
  deleted accidentally after pasting (#12385).


3.0 (2013-04-23)
----------------

- Support advertorial hack and print byline (#11973, #12246)

- Support colorbox links (#11981)

- RAW-Block uses HTML parser and converts given HTML to XML now (#12267).

- Accomodated article to cope for the changed videos: videos are now full CMS
  objects and moved to zeit.content.video (for #8996)

- Articles are created without an addform now. A temporary file is created in
  DAV and automatically checked out. Upon checkin the temporary file is updated
  and renamed to the name given during editing the checked out article (#8080).

- Enable UI for author references (#7441, #7333).
- New Image layout and selectable layout for main_image(#12029)


2.9.6 (unreleased)
------------------

- Cleaned up dependencies on zope.app packages.


2.9.5 (2012-03-06)
------------------

- Update to new ConversionStep API. (#10251)


2.9.4 (2011-12-01)
------------------

- Update to use etree instead of objectify for HTML conversion/wysiwyg
  (via #10027).


2.9.3 (2011-11-24)
------------------

- Fix ordering issue with images: let the PageBreakStep before the
  XMLImageStructureStep because XMLImageStructureStep does not expect an extra
  level of tags (that is it gets confused by `<division><p><image>`).


2.9.2 (2011-06-20)
------------------

- Fix the usage of the product id (for #9033)

- Remove <p>, <intertitle> etc. from the module library (#9923).
